# DependencyInjection

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: DiModule.cmake
src/Di/: Di.hpp
src/Di/Container/: DiContainer.cpp  DiContainer.hpp
src/Di/Engine/Attributes/: DiParameters.hpp
src/Di/Engine/Template/: DiEngineTemplate.hpp
src/Di/Provide/: DiScope.cpp  DiScope.hpp  DiServiceProvider.cpp  DiServiceProvider.hpp
src/Di/Registry/: DiBinding.hpp  DiDecorate.hpp  DiDecorator.hpp  DiDecoratorDescriptor.hpp  DiDependencies.hpp  DiDescribe.hpp  DiDescriptor.hpp  DiDisposer.hpp  DiModuleAnchor.hpp  DiRegistrationRow.hpp  DiRegistry.cpp  DiRegistry.hpp  DiRegistryValidator.cpp  DiRegistryValidator.hpp
src/Di/Registry/Abstraction/: IDiRegistry.hpp
src/Di/Scheme/: DiByServiceKeyScheme.hpp  DiByServiceTypeScheme.hpp  DiConstantServiceScheme.hpp  DiFactoryServiceScheme.hpp  DiFunctionServiceScheme.hpp  DiServiceScheme.hpp
src/Di/Scheme/Abstraction/: EDiServiceLifetime.hpp  IDiServiceScheme.hpp
src/Di/Scheme/Factory/: DiSchemeFactory.cpp  DiSchemeFactory.hpp
src/Di/Scheme/Factory/Abstraction/: IDiSchemeFactory.hpp
src/Di/Scheme/Read/: DiSchemeReader.cpp  DiSchemeReader.hpp
src/Di/Scheme/Read/Abstraction/: IDiSchemeReader.hpp
src/Di/Services/Abstraction/: DiCaster.hpp  DiDependencyInfo.hpp  DiDisposer.hpp  DiServiceId.hpp  DiServiceKey.hpp  IDiDisposable.hpp  IDiServiceProvider.hpp
tests/: CMakeLists.txt
tests/Support/: Registry.hpp  TestTypes.hpp  Wiring.hpp
tests/Unit/: test_absent_dependencies.cpp  test_cycle.cpp  test_decorator.cpp  test_decorator_deps.cpp  test_dependency_chain.cpp  test_disposal_order.cpp  test_expose_identity.cpp  test_extensions.cpp  test_factory_lazy.cpp  test_factory_semantics.cpp  test_instance_ownership.cpp  test_keyed.cpp  test_keyed_injection.cpp  test_lazy_cycle_runtime.cpp  test_lazy_deferral.cpp  test_lazy_singleton.cpp  test_lifetime_composition.cpp  test_missing_dependency.cpp  test_multibinding.cpp  test_order.cpp  test_resolve_all.cpp  test_resolve_selection.cpp  test_resolve_singleton_no_deps.cpp  test_root_registration.cpp  test_scope.cpp  test_scope_isolation.cpp  test_singleton_identity.cpp  test_transient_distinct.cpp  test_validate.cpp
tests/modules/: test_modular.cpp
tests/modules/ModuleA/: ModuleA.hpp  ModuleAAnchor.cpp
tests/modules/ModuleB/: ModuleB.hpp  ModuleBAnchor.cpp
tests/modules/ModuleC/: ModuleC.hpp  ModuleCAnchor.cpp
